--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.0'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.3.0'
+    compile 'org.greenrobot:greendao:3.0.1'
 }
