--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'org.greenrobot:greendao:3.0.1'
+    compile 'com.github.ugurcany:InfiniteListView:1.1.1'
 }
