--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,9 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'org.greenrobot:greendao:3.0.1'
     compile 'com.github.ugurcany:InfiniteListView:1.1.1'
+    compile 'org.parceler:parceler-api:1.1.6'
     testCompile 'junit:junit:4.12'
+    annotationProcessor 'org.parceler:parceler:1.1.6'
+    compile 'com.robertlevonyan.view:MaterialChipView:1.0.1'
+    compile 'co.lujun:androidtagview:1.1.0'
 }
